# franka

./: .gitignore  CHANGELOG.rst  Jenkinsfile
accessories/franka_head_v0_2/: inertials.yaml
franka_ros2/: .gitignore  README.md  pyproject.toml
franka_ros2/docs/: franka_tracker_teleop_nodes_topics.zh-CN.md  franka_tracker_teleop_readme.zh-CN.md  index.rst  tracker_to_franka_control.zh-CN.md
franka_ros2/franka_arm_controllers/: CMakeLists.txt  franka_arm_controllers.xml  package.xml
franka_ros2/franka_arm_controllers/config/: controllers.yaml  controllers_relative_target.yaml  example_fr3_config.yaml  example_fr3_duo_config.yaml  real_fr3v2_1_config.yaml  tracker_fake_fr3_config.yaml
franka_ros2/franka_arm_controllers/include/franka_arm_controllers/: joint_impedance_pose_controller.hpp
franka_ros2/franka_arm_controllers/launch/: fr3v2_1_real.launch.py  franka.launch.py  joint_impedance_pose_controller.launch.py
franka_ros2/franka_arm_controllers/scripts/: move_to_joint_goal.py
franka_ros2/franka_arm_controllers/src/: joint_impedance_pose_controller.cpp
franka_ros2/franka_arm_controllers/test/: test_kdl_joint_state_wiring.py  test_slow_joint_move.py
franka_ros2/franka_arm_controllers/urdf/: franka_arm.urdf.xacro
franka_ros2/franka_bringup/: CMakeLists.txt  package.xml
franka_ros2/franka_bringup/config/: controllers.yaml
franka_ros2/franka_bringup/doc/: index.rst
franka_ros2/franka_bringup/launch/: franka.launch.py
franka_ros2/franka_bringup/test/: ros2_control_test_helpers.py  test_franka_arm_interfaces.py  test_pose_controller_package.py  test_xacro_path_resolution.py
franka_ros2/franka_hardware/doc/: index.rst
franka_ros2/franka_hardware/ros2_control/: franka_ros2_control_macros.xacro
franka_ros2/franka_ros2/: package.xml
franka_ros2/franka_tracker_bridge/: CMakeLists.txt  package.xml
franka_ros2/franka_tracker_bridge/config/: tracker_bridge_fr3v2_1_real.yaml  tracker_bridge_preview.yaml
franka_ros2/franka_tracker_bridge/docs/: tracker_teleop_memory.md
franka_ros2/franka_tracker_bridge/franka_tracker_bridge/: __init__.py  debug_curve_core.py  pose_math.py  ros_conversions.py  tracker_debug_curve_node.py  tracker_meshcat_preview_core.py  tracker_meshcat_preview_node.py  tracker_pose_target_core.py  tracker_pose_target_node.py
franka_ros2/franka_tracker_bridge/include/franka_tracker_bridge/: libsurvive_pose_conversions.hpp
franka_ros2/franka_tracker_bridge/launch/: tracker_preview.launch.py  tracker_real.launch.py
franka_ros2/franka_tracker_bridge/scripts/: tracker_debug_curve_node  tracker_meshcat_preview_node  tracker_pose_target_node
franka_ros2/franka_tracker_bridge/src/: libsurvive_pose_node.cpp
franka_ros2/franka_tracker_bridge/test/: test_debug_curve_core.py  test_debug_curve_node_static.py  test_libsurvive_pose_conversions.cpp  test_relative_target_contract.py  test_tracker_meshcat_preview_core.py  test_tracker_pose_target_core.py  test_tracker_preview_config.py
libsurvive/: README.zh.md
libsurvive/bindings/python/pysurvive/: pysurvive_generated.py
libsurvive/tools/openvr_driver/: openvr_driver.cc
libsurvive/useful_files/: survive-websocketd
robots/common/: franka_arm.ros2_control.xacro
robots/fer/: fer.urdf.xacro
robots/fp3/: fp3.urdf.xacro
robots/fr3/: fr3.urdf.xacro
robots/fr3_duo/: fr3_duo.srdf.xacro  fr3_duo.urdf.xacro  fr3_duo.xacro
robots/fr3v2/: fr3v2.urdf.xacro
robots/fr3v2_1/: fr3v2_1.urdf.xacro
robots/mobile_fr3_duo_v0_2/: mobile_fr3_duo.ros2_control.xacro  mobile_fr3_duo_v0_2.urdf.xacro  mobile_fr3_duo_v0_2.xacro
robots/tmrv0_2/: tmrv0_2.ros2_control.xacro  tmrv0_2.xacro
test/: urdf_tests.py
